Fixing badges alignment on student dashboard

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -39,7 +39,7 @@ div.modal-header h3, .modal-body table {
   #badges .badgeIcon {
     float: left;
     text-align: center;
-    height: 75px;
+    height: 70px;
     width: 62px;
     font-size: 70%;
     margin-bottom: 10px;
